src/MagicMap.IntegrationTests/Tests/InvalidOverrides/NonStaticDefaultMapper/Person.cs
// --------------------------------------------------------------------------------------------------------------------
// <copyright file="Person.cs" company="KUKA Deutschland GmbH">
//   Copyright (c) KUKA Deutschland GmbH 2006 - 2023
// </copyright>
// --------------------------------------------------------------------------------------------------------------------

namespace MagicMap.IntegrationTests.Tests.InvalidOverrides.NonStaticDefaultMapper
{
    public class Person
    {
        #region Public Properties

        public string Name { get; set; }

        #endregion
    }
}
